lib/tree-sitter-czlang/test/corpus/function_declaration.txt
==================
Function declaration with error
==================

fun x() i32 | bool ? u32 {

}

---
(source_file
    (function_definition
        (identifier)
        (parameter_list)
        (sum_type
          (primitive_type)
          (primitive_type))
        (error_op)
        (primitive_type)
        (block)
    )
)
