lib/tree-sitter-czlang/test/corpus/struct_definition.txt
==================
struct declaration
==================

struct TestStruct {
    value i32
    value2 bool
    value3 &string
    value4 &i32
}

---

(source_file
  (struct_definition
    (identifier)
    (field_definition_list
      (field_definition
        (identifier)
        (primitive_type))
      (field_definition
        (identifier)
        (primitive_type))
      (field_definition
        (identifier)
        (reference_type (primitive_type)))
      (field_definition
        (identifier)
        (reference_type (primitive_type))))
  )
)

==================
struct init
==================

fun main() {
    var test = Struct1 {
      field1 = 1,
      field2 = "string",
      field3 = Struct2 {
        field4 = true,
      }
    }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (var_declaration
        (identifier)
        (struct_initialization
          (identifier)
          (keyed_element
            (identifier)
            (int_literal))
          (keyed_element
            (identifier)
            (interpreted_string_literal))
          (keyed_element
            (identifier)
            (struct_initialization
              (identifier)
              (keyed_element
                (identifier)
                (true)
              )
            )
          )
        )
      )
    )
  )
)